wrapped up huddle landing page project and fixing some code from other projects

--- a/single-price-grid-component-master/style.css
+++ b/single-price-grid-component-master/style.css
@@ -1,164 +1,166 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: hsl(218, 22%, 67%);
+  background-color: hsl(204, 43%, 93%);
 }
 
 .container {
-    align-items: center;
-    justify-content: center;
-    margin: 40px 30px;
-    min-width: 300px;
-    display: flex;
-    min-height: 100%;
-    flex-wrap: wrap;
-    font-family: 'Karla';
+  align-items: center;
+  justify-content: center;
+  margin: 20px 40px;
+  min-width: 300px;
+  display: flex;
+  flex-wrap: wrap;
+  height: 100%;
+  font-family: 'Karla';
 }
 
-.box-one,
-.box-two,
-.box-three {
-    padding: 30px 25px;
-    width: 100%;
-    box-shadow: 0px 0px 60px 4px rgba(0, 0, 0, 0.08);
+.primary,
+.secondary,
+.third {
+  padding: 30px 25px;
+  width: 100%;
+  box-shadow: 0px 0px 60px 4px rgba(0, 0, 0, 0.08);
 }
 
-.box-two,
-.box-three {
-    color: white;
+.secondary,
+.third {
+  color: white;
 }
 
-.box-one h3,
-.box-two h3,
-.box-three h3 {
-    font-size: 20px;
-    padding-bottom: 15px;
+.primary h3,
+.secondary h3,
+.third h3 {
+  font-size: 20px;
+  padding-bottom: 15px;
 }
 
-.box-one {
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
-    background-color: white;
+.primary {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  background-color: white;
 }
 
-.box-one h3 {
-    color: hsl(179, 62%, 43%);
+.primary h3 {
+  color: hsl(179, 62%, 43%);
 }
 
 .sub-title {
-    color: hsl(71, 73%, 54%);
-    margin: 0 0 20px;
-    font-weight: 700;
+  color: hsl(71, 73%, 54%);
+  margin: 0 0 20px;
+  font-weight: 700;
 }
 
 .description {
-    color: hsl(218, 22%, 67%);
-    line-height: 1.6;
+  color: hsl(218, 22%, 67%);
+  line-height: 1.6;
 }
 
-.box-two {
-    background-color: hsl(179, 62%, 43%);
+.secondary {
+  background-color: hsl(179, 62%, 43%);
 }
 
 .price-tag {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .price {
-    font-size: 36px;
-    font-weight: 700;
-    margin-right: 8px;
+  font-size: 36px;
+  font-weight: 700;
+  margin-right: 8px;
 }
 
 .info-price {
-    opacity: 0.5;
+  opacity: 0.5;
 }
 
 .info {
-    margin: 5px 0 30px;
+  margin: 5px 0 30px;
 }
 
-.box-two button {
-    width: 100%;
-    padding: 15px;
-    font-family: 'Karla';
-    color: white;
-    background-color: #fff;
-    font-weight: 700;
-    background-color: hsl(71, 73%, 54%);
-    border: none;
-    border-radius: 6px;
-    font-size: 18px;
-    cursor: pointer;
-    box-shadow: 0 0 12px 2px rgba(0, 0, 0, 0.1);
+.secondary button {
+  width: 100%;
+  padding: 15px;
+  font-family: 'Karla';
+  color: white;
+  background-color: #fff;
+  font-weight: 700;
+  background-color: hsl(71, 73%, 54%);
+  border: none;
+  border-radius: 6px;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: 0 0 12px 2px rgba(0, 0, 0, 0.1);
 }
 
-.box-three {
-    border-bottom-left-radius: 6px;
-    border-bottom-right-radius: 6px;
-    background-color: hsl(179, 42%, 57%);
+.third {
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+  background-color: hsl(179, 42%, 57%);
 }
 
-.box-three li {
-    list-style: none;
-    color: hsl(204, 43%, 93%);
+.third li {
+  list-style: none;
+  color: hsl(204, 43%, 93%);
+  font-size: 14px;
 }
 
 footer {
-    color: white;
-    font-size: 16px;
-    margin: 40px auto;
-    text-align: center;
+  color: gray;
+  font-size: 12px;
+  margin: 20px auto 10px;
+  text-align: center;
 }
 
 footer span {
-    display: block;
+  display: block;
 }
 
 footer .fa {
-    color: hsl(154, 59%, 51%);
+  color: hsl(154, 59%, 51%);
 }
 
 footer a {
-    text-decoration: none;
-    color: #424874;
+  text-decoration: none;
+  color: hsl(154, 59%, 51%);
 }
 
 @media screen and (min-width: 640px) {
-    .container {
-        margin: 200px auto 40px;
-        max-width: 600px;
-    }
+  .container {
+    margin: 60px auto 40px;
+    max-width: 550px;
+    max-height: 100%;
+  }
 
-    .box-one {
-        height: 220px;
-    }
+  .primary {
+    height: 220px;
+  }
 
-    .box-two,
-    .box-three {
-        height: 265px;
-        width: 50%;
-    }
+  .secondary,
+  .third {
+    height: 265px;
+    width: 50%;
+  }
 
-    .box-one,
-    .box-two,
-    .box-three {
-        padding: 35px 30px;
-    }
+  .primary,
+  .secondary,
+  .third {
+    padding: 35px 30px;
+  }
 
-    .box-two {
-        border-bottom-left-radius: 6px;
-    }
+  .secondary {
+    border-bottom-left-radius: 6px;
+  }
 
-    .box-three {
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 6px;
-    }
+  .third {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 6px;
+  }
 }
